delivery commands and events