@@ -4,12 +4,10 @@ import com.dddStore.dddstore.business.commons.EventsRepository;
 import com.dddStore.dddstore.business.commons.UseCaseForCommand;
 import com.dddStore.dddstore.domain.staff.Staff;
 import com.dddStore.dddstore.domain.staff.commands.HireDeliveryManCommand;
-import com.dddStore.dddstore.domain.staff.commands.HireSalesmanCommand;
 import com.dddStore.dddstore.domain.staff.values.StaffID;
 import com.dddStore.dddstore.generic.DomainEvent;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class HireDeliveryManUseCase implements UseCaseForCommand<HireDeliveryManCommand> {
     private final EventsRepository eventsRepository;
@@ -23,7 +21,7 @@ public class HireDeliveryManUseCase implements UseCaseForCommand<HireDeliveryMan
         List<DomainEvent> userEvents =  eventsRepository.findByAggregatedRootId(command.getStaffID());
         Staff staff=Staff.from(StaffID.of((command.getStaffID())), userEvents);
         staff.hireDeliveryMan(command.getDeliveryManID(), command.getName(), command.getPersonalID(), command.getEmail(), command.getPhone(), command.getUser(), command.getPassword(), command.getCoordinates(), command.getAddress());
-        return staff.getUncommittedChanges().stream().map(event->eventsRepository.saveEvent(event)).collect(Collectors.toList());
+        return staff.getUncommittedChanges().stream().map(event->eventsRepository.saveEvent(event)).toList();
     }
 
 
